--- a/.env
+++ b/.env
@@ -14,6 +14,7 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
+#APP_ENV=dev
 APP_ENV=dev
 APP_SECRET=48ecdea894187118ff5dcb040969004a
 ###< symfony/framework-bundle ###
@@ -28,5 +29,7 @@ APP_SECRET=48ecdea894187118ff5dcb040969004a
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7"
-DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:5432/app?serverVersion=13&charset=utf8"
+# DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:5432/app?serverVersion=13&charset=utf8"
+# DATABASE_URL="mysql://symfony:symfony@127.0.0.1:4306/symfony_docker?serverVersion=8.0"
+DATABASE_URL="mysql://nuvola:nuvola@database:3306/nuvola?serverVersion=5.7"
 ###< doctrine/doctrine-bundle ###
