--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,29 @@
 version: '3'
 
 services:
-###> doctrine/doctrine-bundle ###
-  database:
-    image: postgres:${POSTGRES_VERSION:-13}-alpine
-    environment:
-      POSTGRES_DB: ${POSTGRES_DB:-app}
-      # You should definitely change the password in production
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-ChangeMe}
-      POSTGRES_USER: ${POSTGRES_USER:-symfony}
-    volumes:
-      - db-data:/var/lib/postgresql/data:rw
-      # You may use a bind-mounted host directory instead, so that it is harder to accidentally remove the volume and lose all your data!
-      # - ./docker/db/data:/var/lib/postgresql/data:rw
-###< doctrine/doctrine-bundle ###
 
-volumes:
-###> doctrine/doctrine-bundle ###
-  db-data:
-###< doctrine/doctrine-bundle ###
+  database:
+    #container_name: database
+    #image: mysql:8.0
+    #command: --default-authentication-plugin=mysql_native_password
+    image: mysql:5.7
+    environment:
+      MYSQL_ROOT_PASSWORD: secret
+      MYSQL_DATABASE: nuvola
+      MYSQL_USER: nuvola
+      MYSQL_PASSWORD: nuvola
+    # ports:
+    #   - '4306:3306'
+    # volumes:
+    #   - ./mysql:/var/lib/mysql
+
+  app:
+    #container_name: app
+    build:
+      context: .
+    ports:
+      - '8000:80'
+    volumes:
+      - .:/var/www/html
+    depends_on:
+      - database
