--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,7 @@ services:
       - ./:/var/www/html
     depends_on: 
       - nuvola
+    command: bash -c 'composer update'
     command: bash -c 'symfony server:start'
     networks:
       vpcbr:
