--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,9 +31,9 @@ jobs:
         with:
           aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          application_name: projetfinal-test
-          environment_name: Projetfinaltest-env
-          version_label: "projetfinal-test-${{ steps.format-time.outputs.replaced }}"
+          application_name: projetfinal
+          environment_name: Projetfinal-env
+          version_label: "projetfinal-${{ steps.format-time.outputs.replaced }}"
           region: eu-central-1
           deployment_package: deploy.zip
     
