--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "symfony/expression-language": "5.3.*",
         "symfony/form": "5.3.*",
         "symfony/framework-bundle": "5.3.*",
+        "symfony/flex": "^1.3.1",
         "symfony/http-client": "5.3.*",
         "symfony/intl": "5.3.*",
         "symfony/mailer": "5.3.*",
