--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ jobs:
         uses: actions/checkout@master
         
       - name: Generate Deployment Package 
-        run: zip -r deploy.zip *
+        run: zip -r deploy.zip * -x '*.git*'
         
       - name: Get timestamp
         uses: gerred/actions/current-time@master
