--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,10 +3,4 @@ version: 0.2
 phases:
   build:
     commands:
-      - echo coucou
-
-artifacts:
-  files:
-    - app.js
-    - package.json
-    - index.html
+      - echo coucou > test.txt
