--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,4 +21,6 @@ jobs:
         uses: aws-actions/aws-codebuild-run-build@v1
         with:
           project-name: projetfinal-2021
+          artifactsOverride: NO_ARTIFACTS
+
     
