--- a/.env
+++ b/.env
@@ -15,7 +15,7 @@
 
 ###> symfony/framework-bundle ###
 #APP_ENV=dev
-APP_ENV=dev
+APP_ENV=prod
 APP_SECRET=48ecdea894187118ff5dcb040969004a
 ###< symfony/framework-bundle ###
 
