--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@
 /var/
 /vendor/
 ###< symfony/framework-bundle ###
+/src/Controller/PhotoController.php
 .env
 ###> symfony/phpunit-bridge ###
 .phpunit.result.cache
