--- a/.env
+++ b/.env
@@ -31,5 +31,5 @@ APP_SECRET=48ecdea894187118ff5dcb040969004a
 # DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7"
 # DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:5432/app?serverVersion=13&charset=utf8"
 # DATABASE_URL="mysql://symfony:symfony@127.0.0.1:4306/symfony_docker?serverVersion=8.0"
-DATABASE_URL="mysql://root:rootroot@prod-nuvola.cveatcxd5odp.eu-central-1.rds.amazonaws.com:3306/nuvola?serverVersion=5.7"
+DATABASE_URL="mysql://nuvola:nuvola@10.5.0.5:3306/nuvola?serverVersion=5.7"
 ###< doctrine/doctrine-bundle ###
